--- a/docs/.vitepress/theme/vars.scss
+++ b/docs/.vitepress/theme/vars.scss
@@ -7,9 +7,10 @@
 /**
  * 颜色系统配置
  * -------------------------------------------------------------------------- */
+
 /**
-* 品牌主色动画
-*/
+ * 品牌主色动画：默认状态
+ */
 :root {
   --vp-c-brand-1: #000000;
   --vp-c-brand-light: #0066ff;
