--- a/docs/.vitepress/theme/vars.scss
+++ b/docs/.vitepress/theme/vars.scss
@@ -13,11 +13,11 @@
  */
 :root {
   --vp-c-brand-1: #000000;
-  --vp-c-brand-light: #0066ff;
-  --vp-c-brand-lighter: #78fadc;
-  --vp-c-brand-dark: #008269;
-  --vp-c-brand-darker: #005d47;
-  --vp-c-brand-next: #009ff7;
+  --vp-c-brand-light: #1E85EE;
+  --vp-c-brand-lighter: #56D7FA;
+  --vp-c-brand-dark: #02187C;
+  --vp-c-brand-darker: #2DE67B;
+  --vp-c-brand-next: #6f00f7;
   animation: rainbow 40s linear infinite;
 }
 
@@ -52,12 +52,6 @@
 
 }
 
-/* 深色模式特定配置 */
-.dark {
-  --vp-code-block-bg: rgb(0 0 0 / 0.2); /* 深色模式下代码块背景色 */
-  --vp-c-text-code: #c0cec0; /* 深色模式下代码文字颜色 */
-}
-
 /**
  * 按钮组件配置
  * -------------------------------------------------------------------------- */
@@ -82,10 +76,10 @@
 :root {
   /* 首页英雄区域文字样式 */
   --vp-home-hero-name-color: transparent; /* 英雄区域名称文字颜色设为透明，使用背景渐变 */
-  --vp-home-hero-name-background: -webkit-linear-gradient(120deg, var(--vp-c-brand-1) 30%, var(--vp-c-brand-next)); /* 英雄区域名称背景渐变 */
+  --vp-home-hero-name-background: -webkit-linear-gradient(120deg, var(--vp-c-brand-light) 20%, var(--vp-c-brand-next)); /* 英雄区域名称背景渐变 */
   
   /* 首页英雄区域图片样式 */
-  --vp-home-hero-image-background-image: linear-gradient(-45deg, var(--vp-c-brand-1) 30%, var(--vp-c-brand-next)); /* 英雄区域图片背景渐变 */
+  --vp-home-hero-image-background-image: linear-gradient(-45deg, var(--vp-c-brand-light) 20%, var(--vp-c-brand-next)); /* 英雄区域图片背景渐变 */
   --vp-home-hero-image-filter: blur(80px); /* 英雄区域图片模糊效果 */
 }
 
