--- a/docs/.vitepress/theme/vars.scss
+++ b/docs/.vitepress/theme/vars.scss
@@ -16,8 +16,8 @@
   --vp-c-brand-light: #1E85EE;
   --vp-c-brand-lighter: #56D7FA;
   --vp-c-brand-dark: #02187C;
-  --vp-c-brand-darker: #2DE67B;
-  --vp-c-brand-next: #6f00f7;
+  --vp-c-brand-darker: #8B5CF6;
+  --vp-c-brand-next: #EC4899;
   animation: rainbow 40s linear infinite;
 }
 
