style(docs): 移除注释掉的侧边栏样式代码

--- a/docs/.vitepress/theme/overrides.scss
+++ b/docs/.vitepress/theme/overrides.scss
@@ -144,10 +144,10 @@ table {
 }
 
 /* 自定义 sidebar 样式 */
-.VPSidebar {
-  // border-right: 1px solid #eaeefb;
-  /* background-color: var(--vp-c-bg) !important; */
-}
+// .VPSidebar {
+//   // border-right: 1px solid #eaeefb;
+//   // background-color: var(--vp-c-bg) !important;
+// }
 .VPSidebarItem > .item > .text {
   font-size: 16px;
   font-weight: bold;
