refactor(docs): 重构文档结构和样式，优化图标展示组件

--- a/docs/.vitepress/theme/vp-hidden.scss
+++ b/docs/.vitepress/theme/vp-hidden.scss
@@ -40,3 +40,12 @@
 .divider {
     display: none;
 }
+
+/* 文档页标题下横条隐藏 */
+.vp-doc h2 {
+    border-top: 0px solid transparent;
+}
+/* 文档页上/下页导航横条隐藏 */
+.VPDocFooter .prev-next {
+    border-top: 0px solid transparent;
+}
