--- a/docs/.vitepress/theme/overrides.scss
+++ b/docs/.vitepress/theme/overrides.scss
@@ -165,6 +165,13 @@ table {
   margin-bottom: 50px !important;
 }
 
+.VPHome .VPButton.medium {
+    border-radius: 20px;
+    padding: 0px 11px;
+    line-height: 35px;
+    font-size: 13px;
+}
+
 .VPSocialLink.no-icon {
   color: var(---zdy-3);
 }
